--- a/html/AVtory.html
+++ b/html/AVtory.html
@@ -4,7 +4,7 @@
 	<title> AVtory Homepage </title>
 	<meta charset = "utf-8">
 	<!-- Link to CSS -->
-	<link rel="stylesheet" type="text/css" href="avtory/AVtory.css">
+	<link rel="stylesheet" type="text/css" href="../css/AVtory.css">
 </head>
 <body>
 <!-- HEADER -->
@@ -16,7 +16,7 @@
         </p>  
         
         <p id="menu">
-        	<a href="http://public.csusm.edu/mettavy/AVtory.html"target="_blank">Home</a> | 
+        	<a href="../html/AVtory.html" target="_blank">Home</a> | 
         	<a href="http://public.csusm.edu/mettavy/equipment.html" target="_blank">Equipment</a> |
         	<a href="http://public.csusm.edu/mettavy/chkin.html" target="_blank">Check-In</a> |
         	<a href="http://public.csusm.edu/mettavy/chkout.html" target="_blank">Check-Out</a> |
