--- a/html/chkin.html
+++ b/html/chkin.html
@@ -4,7 +4,7 @@
 	<title> AVtory Homepage </title>
 	<meta charset = "utf-8">
 	<!-- Link to CSS -->
-	<link rel="stylesheet" type="text/css" href="avtory/AVtory.css">
+	<link rel="stylesheet" type="text/css" href="../css/AVtory.css">
 </head>
 <body>
 <!-- HEADER -->
