--- a/html/add.html
+++ b/html/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
-	<title> AVtory Logout </title>
+	<title> AVtory Homepage </title>
 	<meta charset = "utf-8">
 	<!-- Link to CSS -->
 	<link rel="stylesheet" type="text/css" href="../css/AVtory.css">
@@ -10,9 +10,13 @@
 <!-- HEADER -->
 <div class="top_container">
     <div class="header">
-        <p id="menu">Header and Menu Bar Goes Here</p>
+        
+		<p id="menu"><img src="avtory/AVtory.png" width="200" height="auto"></br>
+        AVtory Homepage
+        </p>  
+        
         <p id="menu">
-        	<a href="http://public.csusm.edu/mettavy/AVtory.html"target="_blank">Home</a> | 
+        	<a href="../html/AVtory.html" target="_blank">Home</a> | 
         	<a href="http://public.csusm.edu/mettavy/equipment.html" target="_blank">Equipment</a> |
         	<a href="http://public.csusm.edu/mettavy/chkin.html" target="_blank">Check-In</a> |
         	<a href="http://public.csusm.edu/mettavy/chkout.html" target="_blank">Check-Out</a> |
