--- a/html/addEquipment.html
+++ b/html/addEquipment.html
@@ -146,6 +146,24 @@
           Clear
         </a>      
       </form>
+
+          <b>Name:</b> Add Items</br>
+          <b>Primary Actors:</b> Standard User or Administrator User</br>
+          <b>Priority:</b>  High</br>
+          <b>Entry Condition:</b> User has privileges to access inventory and is on the equipment page</br>
+          Exit Condition: User successfully adds new items </br>
+
+          <b>Flow of Events:</b>
+          User clicks on the “Add Items” button on the screen.</br>
+          User selects or enters the quantity of items to add. </br>
+          User enters relevant information associated with adding new equipment items. </br>
+          <b>Alternative Flows:</b>
+          User enters invalid information, prompt user with error message and the proper fields to enter. </br>
+          <b>Special Requirements:</b> The maximum time to add a new item should not exceed 30 seconds.  </br>
+
+
+
+
     </div> 
 
 
@@ -161,6 +179,8 @@
           <a class="dropdown-item" href="../html/about.html">AVtory</a> 
           <a class="dropdown-item " href="../html/equipment.html">Equipment</a> 
           <a class="dropdown-item active" href="../html/addEquipment.html">Add Equipment</a> 
+          <a class="dropdown-item" href="../html/editEquipment.html">Edit Equipment</a> 
+          <a class="dropdown-item" href="../html/deleteEquipment.html">Delete Equipment</a> 
           <a class="dropdown-item" href="../html/chkin.html">Check In</a> 
           <a class="dropdown-item" href="../html/login.html">Check Out</a> 
       </div>
