--- a/html/deleteEquipment.html
+++ b/html/deleteEquipment.html
@@ -1,5 +1,5 @@
 <!--
-  Edit Equipment AVtory
+  Delete Equipment AVtory
   * =^.,.^= DENISE THUY VY NGUYEN
   10-25-2017
 -->
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
-    <title>Add Equipment</title>
+    <title>Delete Equipment</title>
         <link rel="icon" href="../images/AV.png"/>
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -157,16 +157,16 @@
 
     
     <div class="jumbotron mt-3">
-      <b>Name:</b> Edit Item</br>
+      <b>Name:</b> Delete Item</br>
       <b>Primary Actors:</b> Standard User or Administrator User
       <b>Priority:</b>  High</br>
       <b>Entry Condition:</b> User has privileges to access inventory and is on the equipment page</br>
-      <b>Exit Condition:</b> User successfully edits an item</br> 
+      <b>Exit Condition:</b> User successfully deletes an item</br> 
 
       <b>Flow of Events:</b>
-      User clicks on the “Edit Items” button on the screen.</br>
-      User selects “View All Inventory" or “View Inventory by Category” of items. </br>
-      User selects the item to be edited, and updates the item.</br>
+      User clicks on the “Delete Items” button on the screen.</br>
+      User will select “View All Inventory” or “View Inventory by Category” of items. </br>
+     User selects an item to be removed and deletes the item. </br>
       <b>Alternative Flows:</b>
       User inputs are invalid, prompt an error message with proper fields to enter. </br>
       User attempts to edit an item that does not exist. </br>
@@ -189,8 +189,8 @@
           <a class="dropdown-item" href="../html/about.html">AVtory</a> 
           <a class="dropdown-item " href="../html/equipment.html">Equipment</a> 
           <a class="dropdown-item" href="../html/addEquipment.html">Add Equipment</a> 
-          <a class="dropdown-item active" href="../html/editEquipment.html">Edit Equipment</a> 
-          <a class="dropdown-item" href="../html/deleteEquipment.html">Delete Equipment</a> 
+          <a class="dropdown-item" href="../html/editEquipment.html">Edit Equipment</a> 
+          <a class="dropdown-item active" href="../html/deleteEquipment.html">Delete Equipment</a> 
           <a class="dropdown-item" href="../html/chkin.html">Check In</a> 
           <a class="dropdown-item" href="../html/login.html">Check Out</a> 
       </div>
