select Edit meows

--- a/html/about2.html
+++ b/html/about2.html
@@ -11,25 +11,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
-    <title>AVtory</title>
+    <title>About</title>
         <link rel="icon" href="../images/AV.png"/>
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
   </head>
 
-<body>
-  <header>
 <!--TOP NAV BAR-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="../html/AVtory.html">
+    <a class="navbar-brand" href="../html/test1.html">
       <img src="../images/AV.png" width="50" height="auto"/>
     </a>
 
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link active" href="../html/AVtory.html">Home</a>
@@ -45,41 +42,46 @@
       </div>
     </nav>
   </header> 
-  <!--END OF TOP NAV BAR-->
+    <!--END OF TOP NAV BAR-->
 
-  <!--START OF BODY-->
-  <div class="container">
-    <div class="jumbotron mt-3">
-        <p id="main_content">&#9;&#9;   &#9;&#9;</p>
-        <p id="main_content">&#9;&#9;   &#9;&#9;</p>
+    <!--START OF BODY-->
+    <body>
+    <div class="container">
+      <div class="jumbotron mt-3">
+        <h1>AVtory Sign-Up</h1>
+          <p class="lead">Click to sign up</p>
+        <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
+          <a class="btn btn-lg btn-primary" href="../html/signup.html" role="button">Sign-Up &raquo;</a> 
         <p id="main_content">
-          We would like to develop a web application to manage equipment and inventory. This inventory management system would improve efficiency by providing the employees with a secure and user-friendly interface to interact with their equipment stored in a database.
-          Problem Statement
-          Many organizations manage their inventory through custom spreadsheets or text documents, which are error prone and time consuming. Commercial solutions to this problem exist, but they are expensive. Open source solutions also exist, but most of them lack essential features such as the ability to check out equipment. Therefore, we will create our own system to manage inventory.
-        </p>
-
-        <h1>AVtory</h1>
-        <p class="lead">This example of meows =^.,.^=</p>
+          <h1>AVtory Login</h1>
+          <p class="lead">Click to login</p>
+          <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
+        <a class="btn btn-lg btn-primary" href="../html/login.html" role="button">Login &raquo;</a> 
+          <h1>AVtory</h1>
         <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
-        <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
-        <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
-        <p id="main_content">&#9;&#9;  |  &#9;&#9;</p>
-        <p id="main_content">&#9;&#9;  V  &#9;&#9;</p>
-
-        <a class="btn btn-lg btn-primary" href="../html/about2.html" role="button">AVtory &raquo;</a>
+        <a class="btn btn-lg btn-primary" href="../html/AVtory.html" role="button">AVtory &raquo;</a> 
       </div> 
+      <!--END OF BODY-->
 
+      <div class="container">
+      <div class="jumbotron mt-3">
+           We would like to develop a web application to manage equipment and inventory. This inventory management system would improve efficiency by providing the employees with a secure and user-friendly interface to interact with their equipment stored in a database.
+        </p>
+      </div> 
+    </div>
+  </p>
+</div>
+   
 
-
-      <!--BOTTOM NAV BAR-->
+<!--BOTTOM NAV BAR-->
       <nav class="navbar fixed-bottom navbar-expand navbar-dark bg-dark">
+        
       <!--BOTTOM DROP UP-->
       <li class="nav-item dropup" style="list-style-type:none" >
-      	<a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
-        	<img src="../images/arrowuppWhite.png" width="25" height="auto">
-       </a>     
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false"><img src="../images/arrowup.png" width="25" height="auto">
+        </a>
       <div class="dropdown-menu" aria-labelledby="dropdown10">
-          <a class="dropdown-item active" href="../html/about.html">AVtory</a> 
+         <a class="dropdown-item active" href="../html/about.html">AVtory</a> 
           <a class="dropdown-item" href="../html/equipment.html">Equipment</a> 
           <a class="dropdown-item" href="../html/chkin.html">Check In</a> 
           <a class="dropdown-item" href="../html/login.html">Check Out</a> 
