--- a/html/equipment.html
+++ b/html/equipment.html
@@ -50,15 +50,7 @@
   <!--START OF BODY-->
   <div class="container">
     <div class="jumbotron mt-3">
-      <img src="images/AVtory.png" width="200" height="auto"></br></p>
-
-        <p id="main_content"> 
-          <img src="../images/AVtory.png" width="200" height="auto"></br>
-
-        </p>
-
-
-
+      <img src="../images/AVtory.png" alt="AVtory" width="300" height="300"></br></p>
         <p id="main_content">
             Equipment Actions:
 
